# cloudrift

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  develop.yml  publish.yml  release.yml
cloudrift/: __init__.py
cloudrift/cache/: __init__.py  base.py  redis_azure.py  redis_elasticache.py  redis_standalone.py
cloudrift/core/: exceptions.py
cloudrift/document/: __init__.py  base.py  cosmos.py  cosmos_sync.py  documentdb.py  documentdb_sync.py
cloudrift/email/: __init__.py  azure_acs.py  base.py  ses.py  smtp.py
cloudrift/messaging/: __init__.py  azure_bus.py  base.py  sqs.py
cloudrift/pubsub/: __init__.py  azure_eventgrid.py  base.py  sns.py
cloudrift/secrets/: __init__.py  aws_secrets_manager.py  azure_keyvault.py  base.py
cloudrift/storage/: __init__.py  azure_blob.py  base.py  s3.py
tests/: test_cache.py  test_document.py  test_document_sync.py  test_email.py  test_ensure_lifecycle.py  test_messaging.py  test_messaging_azure.py  test_pubsub.py  test_secrets.py  test_storage.py
